    * Magic tools can register themselves as paint with one click
      (versus click/drag/release): MODE_ONECLICK.  (e.g., "Ripples")
      Utilized by mouse-accessibility feature.

    * Magic tools can register themsevles as paint-with-a-preview:
      MODE_PAINT_WITH_PREVIEW.  (e.g., "Flower")
      Utilized by mouse-accessibility feature.

  * Other Improvements:
    -------------------
    * Showing a warning when using save-related options when "nosave" is set.
      (SourceForge Bug #3327493)

    * Quicker prompt window pop-up animation.

    * Left/Right Stamp navigation buttons are purple, like the other (up/down)
      scroll buttons found in Tux Paint.
      (SourceForge Bug #2918289)

    * Slightly improved mouse motion handling when Tux Paint is very busy
      drawing or previewing.  (e.g., when drawing a circle, you could often
      end up with a "D" shape... now, you get more of a regular polygon shape
      if Tux Paint is taking too long to draw.  It skips some motion events,
      rather than ignoring all motion events after the first 1/4th second.)

    * Deleting files from Tux Paint's 'Open' dialog now moves them to
      the user's Trash folder.
      FIXME: Only on freedesktop.org systems (e.g., Linux)
      (SourceForge.net Feature #3101084)

    * Tux Paint (in windowed mode) now only centers itself if
      no specific positioning has been provided via
      the SDL_VIDEO_WINDOW_POS environment variable.
      (SourceForge Bug #3138446)

    * Creating thumbnails for the starters we provide.
      (Speeds up 'New' dialog appearance.)
      (SourceForge Bug #1417849)
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * On systems where Pango is used for UI text rendering, Tux Paint now
      spawns a temporary thread during start-up (at the splash screen) to
      allow "fontconfig" to generate its font cache in the background,
      while showing the "please wait" animation, and responding to the US.