@@ -1,2 +1,3 @@
 frames=5
+spacing=25
 random
